--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ import Techs from '../components/Techs.jsx'
 			</CardContainer>
 		</section>
 		<section id='tecnologías'>
-			<h3>TECNOLOGÍAS</h3>
+			<h3>TECNOLOGÍAS QUE DOMINO</h3>
 			<Techs />
 		</section>
 	</main>
