--- a/src/components/Techs.css
+++ b/src/components/Techs.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     gap: 1rem;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
 
 .tecnologias svg{
