Añadidas tecnologías y proyectos

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,6 +54,16 @@ import Techs from '../components/Techs.jsx'
 						información detallada de las mismas gracias a la API de OMDB
 					</p>
 				</Card>
+				<Card 
+					title="Badajoz Unida"
+					techs='Angular, PHP'
+					github='https://github.com/genarosalas10/badajozUnida'
+				>
+					<p>
+						Proyecto en grupo de fin de curso que consistía en el prototipo de una plataforma para organizar y unirse
+						a diferentes eventos multiculturales en la ciudad de Badajoz
+					</p>
+				</Card>
 			</CardContainer>
 		</section>
 		<section id='tecnologías'>
