Añadido extra mQuery

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,6 +48,8 @@ import Techs from '../components/Techs.jsx'
 				<Card 
 					title="mQuery"
 					techs='SvelteKit'
+					github='https://github.com/mperezpizarro/mQuery'
+					web='https://dr4fty-mquery.netlify.app'
 				>
 					<p>
 						Aplicación que permite buscar tus series y películas favoritas y ver 
