--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,6 +46,17 @@ import Techs from '../components/Techs.jsx'
 					</p>
 				</Card>
 				<Card 
+					title="Password generator"
+					techs='Vite, React, Tailwind CSS'
+					github='https://github.com/mperezpizarro/password-generator'
+					web='https://dr4fty-password-generator.vercel.app'
+				>
+					<p>
+						Aplicación sencilla para generar una contraseña aleatoria. Permite ajustar la
+						longitud de la misma de 8 a 24 caracteres
+					</p>
+				</Card>
+				<Card 
 					title="mQuery"
 					techs='SvelteKit'
 					github='https://github.com/mperezpizarro/mQuery'
