--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,8 +30,11 @@ const { title } = Astro.props;
 		box-sizing: border-box;
 	}
 
-	body{
+	html{
 		scroll-behavior: smooth;
+	}
+
+	body{
 		background-color: #2c2c31;
 		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	}
