--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,88 +1,19 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Navbar from '../components/Navbar.jsx'
-import Contact from '../components/Contact.jsx'
-import CardContainer from '../components/CardContainer.jsx'
-import Card from '../components/Card.jsx'
-import Techs from '../components/Techs.jsx'
+import Header from '../components/Header.astro'
+import Experience from '../components/Experience.astro'
+import Projects from '../components/Projects.astro'
+import MyTechs from '../components/MyTechs.astro'
 ---
 
 <Layout title="Mi portfolio">
 	<main>
 		<Navbar client:load />
-		<section>
-			<h1>¡Hola, soy <span>Mario</span>!</h1>
-			<h2>Soy un <span>desarrollador frontend.</span></h2>
-			<Contact />
-		</section>
-		<section id="experiencia">
-			<h3>MI EXPERIENCIA</h3>
-			<CardContainer>
-				<Card title="2022" place='Canal Cúbico'>
-					<p>Formación en centro de trabajo. - Desarrollo de Aplicaciones Web</p>
-					<p>Prácticas de React, Docker e Ionic</p>
-				</Card>
-				<Card title="2020 - 2022" place='Escuela Virgen de Guadalupe'>
-					<p>Formación Profesional de Grado Superior. - Desarrollo de Aplicaciones Web</p>
-					<p>Frontend, backend, diseño y despliegue</p>
-				</Card>
-				<Card title="2018 - 2020" place='IES Rodríguez Moñino'>
-					<p>Bachillerato de ciencias - Rama tecnológica</p>
-				</Card>
-			</CardContainer>
-		</section>
-		<section id="proyectos">
-			<h3>MIS PROYECTOS</h3>
-			<CardContainer>
-				<Card 
-					title="Shiba Cards" 
-					github='https://github.com/mperezpizarro/shibaCard'
-					web='https://shiba-cards.netlify.app'
-					techs='Vite, React'
-				>
-					<p>
-						Aplicación que muestra una foto al azar de un Shiba Inu gracias a la API de shibe.online
-						y la librería de React Flippy
-					</p>
-				</Card>
-				<Card 
-					title="Password generator"
-					techs='Vite, React, Tailwind CSS'
-					github='https://github.com/mperezpizarro/password-generator'
-					web='https://dr4fty-password-generator.vercel.app'
-				>
-					<p>
-						Aplicación sencilla para generar una contraseña aleatoria. Permite ajustar la
-						longitud de la misma de 8 a 24 caracteres
-					</p>
-				</Card>
-				<Card 
-					title="mQuery"
-					techs='SvelteKit'
-					github='https://github.com/mperezpizarro/mQuery'
-					web='https://dr4fty-mquery.netlify.app'
-				>
-					<p>
-						Aplicación que permite buscar tus series y películas favoritas y ver 
-						información detallada de las mismas gracias a la API de OMDB
-					</p>
-				</Card>
-				<Card 
-					title="Badajoz Unida"
-					techs='Angular, PHP'
-					github='https://github.com/genarosalas10/badajozUnida'
-				>
-					<p>
-						Proyecto en grupo de fin de curso que consistía en el prototipo de una plataforma para organizar y unirse
-						a diferentes eventos multiculturales en la ciudad de Badajoz
-					</p>
-				</Card>
-			</CardContainer>
-		</section>
-		<section id='tecnologías'>
-			<h3>TECNOLOGÍAS QUE DOMINO</h3>
-			<Techs />
-		</section>
+		<Header />
+		<Experience />
+		<Projects />
+		<MyTechs />
 	</main>
 </Layout>
 
@@ -91,49 +22,5 @@ import Techs from '../components/Techs.jsx'
 		max-width: 850px;	
 		margin: 0 auto;
 		padding: 1rem;
-	}
-
-	h1{
-		color: #fff;
-		font-size: 3rem;
-		text-align: center;
-		line-height: 1.8rem;
-	}
-
-	h2{
-		color: #fff;
-		font-size: 2.5rem;
-		line-height: 1.8rem;
-		text-align: center;
-	}
-
-	h1 span, h2 span{
-		background: -webkit-linear-gradient(180deg, #306EFF, #3565D6);
-  		-webkit-background-clip: text;
-  		-webkit-text-fill-color: transparent;
-	}
-
-	section{
-		margin: 2rem 0;
-		padding: .2rem;
-	}
-
-	h3{
-		font-size: 1.5rem;
-		color: #306EFF;
-	}
-
-	@media screen and (max-width: 650px){
-		h1{
-			font-size: 2rem;
-		}
-
-		h2{
-			font-size: 1.3rem;
-		}
-
-		h3{
-			font-size: 1.1rem;
-		}
 	}
 </style>
