Añadido curso de TS

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,6 +6,14 @@ import Card from '../components/Card.jsx'
 <section id="experiencia">
     <h3>MI EXPERIENCIA</h3>
     <CardContainer>
+        <Card 
+            title="2022" 
+            web="https://learn.microsoft.com/es-es/training/achievements/learn.language.build-javascript-applications-typescript.trophy?username=MarioPrezPizarro-0420"
+            place="Microsoft Learn"
+        >
+            <p>Curso gratuito de Microsoft para aprender a utilizar Typescript</p>
+            <p>Comprende desde los básicos del lenguaje hasta el uso de Interfaces, Clases, Namespaces...</p>
+        </Card>
         <Card title="2022" place='Canal Cúbico'>
             <p>Formación en centro de trabajo. - Desarrollo de Aplicaciones Web</p>
             <p>Prácticas de React, Docker e Ionic</p>
