--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,12 +1,22 @@
 .navbar-container{
+    width: 100%;
     height: 80px;
+    position: sticky;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #2c2c31;
+    z-index: 10;
+}
+
+.navbar-wrapper {
+    width: 100%;
+    max-width: 850px;
+    padding: .5rem 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: sticky;
-    top: 0;
-    background-color: #2c2c31;
-    z-index: 10;
 }
 
 .navbar-container .logo img{
