--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -59,23 +59,25 @@
 
     .navbar-container .mobile-menu{
         display: block;
+        padding: 0;
+        margin: 0;
     }
 
     .navbar-container .mobile-menu ul{
         position: fixed;
         top: 0;
-        right: -100%;
+        right: -150%;
         list-style-type: none;
         text-transform: uppercase;
         background-color: #2c2c31;
-        padding: 2rem;
-        width: 300px;
+        width: 100%;
         height: 100vh;
         transition: .1s ease;
         display: flex;
         flex-direction: column;
         row-gap: 2.5rem;
-        justify-content: flex-start;
+        align-items: center;
+        justify-content: center;
     }
 
     .navbar-container .mobile-menu ul li a{
