Updated techs and projects

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,20 +6,29 @@ import Card from '../components/Card.jsx'
 <section id="proyectos">
     <h3>MIS PROYECTOS</h3>
     <CardContainer>
-        <Card 
-            title="Shiba Cards" 
-            github='https://github.com/mperezpizarro/shibaCard'
-            web='https://shiba-cards.netlify.app'
-            techs='Vite, React'
+        <Card
+            title="Blog Personal"
+            web="https://dr4fty-blog.vercel.app/"
+            techs="Astro, React, Tailwind, Markdown"
         >
             <p>
-                Aplicación que muestra una foto al azar de un Shiba Inu gracias a la API de shibe.online
-                y la librería de React Flippy
+                Blog personal donde subo artículos relacionados con el diseño y desarrollo frontend.
+            </p>
+        </Card>
+        <Card 
+            title="Animal Pics" 
+            github='https://github.com/mperezpizarro/animal-pics'
+            web='https://animal-pics.vercel.app '
+            techs='Next, React, Tailwind'
+        >
+            <p>
+                Aplicación que muestra una foto al azar de un Shiba, pato o zorro gracias a la ayuda
+                de distintas APIs.
             </p>
         </Card>
         <Card 
             title="Password generator"
-            techs='Vite, React, Tailwind CSS'
+            techs='Vite, React, Tailwind'
             github='https://github.com/mperezpizarro/password-generator'
             web='https://dr4fty-password-generator.vercel.app'
         >
