Updated techs & projects

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,6 +7,16 @@ import Card from '../components/Card.jsx'
     <h3>MIS PROYECTOS</h3>
     <CardContainer>
         <Card
+            title="Fichas de doblaje"
+            github="https://github.com/mperezpizarro/fichas-doblaje"
+            web="https://fichas-doblaje.vercel.app/"
+            techs="Nuxt, Vue, Tailwind"
+        >
+            <p>
+                Proyecto para aprender Nuxt que busca y muestra datos a través de una API creada en el mismo framework.
+            </p>
+        </Card>
+        <Card
             title="Blog Personal"
             web="https://dr4fty-blog.vercel.app/"
             techs="Astro, React, Tailwind, Markdown"
@@ -35,17 +45,6 @@ import Card from '../components/Card.jsx'
             <p>
                 Aplicación sencilla para generar una contraseña aleatoria. Permite ajustar la
                 longitud de la misma de 8 a 24 caracteres
-            </p>
-        </Card>
-        <Card 
-            title="mQuery"
-            techs='SvelteKit'
-            github='https://github.com/mperezpizarro/mQuery'
-            web='https://dr4fty-mquery.netlify.app'
-        >
-            <p>
-                Aplicación que permite buscar tus series y películas favoritas y ver 
-                información detallada de las mismas gracias a la API de OMDB
             </p>
         </Card>
         <Card 
