--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -14,19 +14,19 @@ const { lang = "es" } = Astro.props
             web="https://learn.microsoft.com/es-es/training/achievements/learn.language.build-javascript-applications-typescript.trophy?username=MarioPrezPizarro-0420"
             place="Microsoft Learn"
         >
-            <p>Curso gratuito de Microsoft para aprender a utilizar Typescript</p>
-            <p>Comprende desde los básicos del lenguaje hasta el uso de Interfaces, Clases, Namespaces...</p>
+        <p>{ i18nExperience[lang].ms_learn_ts[0] }</p>
+        <p>{ i18nExperience[lang].ms_learn_ts[1] }</p>
         </Card>
         <Card title="2022" place='Canal Cúbico'>
-            <p>Formación en centro de trabajo. - Desarrollo de Aplicaciones Web</p>
-            <p>Prácticas de React, Docker e Ionic</p>
+            <p>{ i18nExperience[lang].canal_cubico[0] }</p>
+            <p>{ i18nExperience[lang].canal_cubico[1] }</p>
         </Card>
         <Card title="2020 - 2022" place='Escuela Virgen de Guadalupe'>
-            <p>Formación Profesional de Grado Superior. - Desarrollo de Aplicaciones Web</p>
-            <p>Frontend, backend, diseño y despliegue</p>
+            <p>{ i18nExperience[lang].evg[0] }</p>
+            <p>{ i18nExperience[lang].evg[1] }</p>
         </Card>
         <Card title="2018 - 2020" place='IES Rodríguez Moñino'>
-            <p>Bachillerato de ciencias - Rama tecnológica</p>
+            <p>{ i18nExperience[lang].bachiller }</p>
         </Card>
     </CardContainer>
 </section>
