--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -39,13 +39,13 @@ const { lang = "es" } = Astro.props
             </p>
         </Card>
         <Card 
-            title="Animal Pics" 
-            github='https://github.com/mperezpizarro/animal-pics'
-            web='https://animal-pics.vercel.app '
-            techs='Next, React, Tailwind'
+            title="Shiba Cards" 
+            github='https://github.com/mperezpizarro/shiba-cards'
+            web='https://shiba-cards.netlify.app '
+            techs='Vite, Vue, Tailwind'
         >
             <p>
-                { i18nProjects[lang].animal_pics }
+                { i18nProjects[lang].shiba_cards }
             </p>
         </Card>
         <Card 
